--- a/addemail.html
+++ b/addemail.html
@@ -32,7 +32,7 @@
 	<input type="text" id="lastname" name="lastname" /><br />
 	<label for="email">Remove by Email:</label>
 	<input type="text" id="email" name="email" /><br />
-	<input itype="submit" name="submit" value="Remove" />
+	<input type="submit" name="submit" value="Remove" />
 </form>
 
 </body>
