--- a/addemail.html
+++ b/addemail.html
@@ -13,23 +13,33 @@
 
 <p><b>Add email to mailing list</b></p>
 <form class="addform" method="post" action="addemail.php">
+<fieldset>
 	<label for="firstname">First name:</label>
-	<input type="text" id="firstname" name="firstname" /><br />
+	<input type="text" id="firstname" placeholder="Enter your first name" name="firstname" required/><br />
 	<label for="lastname">Last name:</label>
-	<input type="text" id="lastname" name="lastname" /><br />
+	<input type="text" id="lastname" placeholder="Enter your last name" name="lastname" required/><br />
 	<label for="email">Email:</label>
-	<input type="text" id="email" name="email" /><br />
+	<input type="text" id="email" placeholder="Enter your email"name="email" required/><br />
 	<input class="submitbtn" type="submit" name="submit" value="Submit" />
+</fieldset>
 </form>
+
 <p><b>Remove email from mailing list</b></p>
 <form method="post" action="removeemail.php">
+<fieldset>
 	<label for="firstname">Remove by First name:</label>
-	<input type="text" id="firstname" name="firstname" /><br />
+	<input type="text" placeholder="Enter First Name" id="firstname" name="firstname" /><br />
 	<label for="lastname">Remove by Last name:</label>
-	<input type="text" id="lastname" name="lastname" /><br />
+	<input type="text" placeholder="Enter Last Name" id="lastname" name="lastname" /><br />
 	<label for="email">Remove by Email:</label>
-	<input type="text" id="email" name="email" /><br />
+	<input type="text" placeholder="Enter Email Address" id="email" name="email" /><br />
 	<input type="submit" name="submit" value="Remove" />
+</fieldset>
+</form>
+
+<p><b>Show Entire DB</b></p>
+	<form  method="post" action="showdb.php">
+	<input type="submit" name="submit" value="Show DB" />
 </form>
 
 </body>
